--- a/theme/_news.scss
+++ b/theme/_news.scss
@@ -1,8 +1,12 @@
 .breadcrumbs {
-  display: flex;
+  margin-bottom: 56px;
+  padding-left: 15px;
+  padding-right: 15px;
   //margin-bottom: 56px;
   &__container {
-    margin-bottom: 56px;
+  }
+  &-list {
+    display: flex;
   }
   li {
     position: relative;
@@ -30,48 +34,68 @@
     text-decoration: none;
     color: rgba($dark, 0.56);
     font-size: 13px;
-    transition: color .25s ease;
+    transition: color 0.25s ease;
     &:hover {
       color: rgba($dark, 1);
-      transition: color .25s ease;
+      transition: color 0.25s ease;
     }
   }
 }
 .news-container {
   width: 100%;
-  max-width: 1180px;
+  max-width: 1195px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 .news-inner-container {
   width: 100%;
-  max-width: 940px;
+  max-width: 955px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 .pagination {
   display: flex;
   align-items: center;
   margin-top: 64px;
+  .paginate-pages-container {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    padding: 0 30px;
+    @include tablet-block() {
+      width: 100%;
+      max-width: 100%;
+      overflow-y: scroll;
+      padding: 30px;
+    }
+  }
+  @include tablet-block() {
+    flex-direction: column;
+  }
   li {
     position: relative;
     margin-right: 1px;
-    &:first-child, &:last-child {
-      font-size: 20px;
-      font-weight: 700;
-      color: $blue;
-      &::after {
-        position: absolute;
-        content: '';
-        bottom: 0;
-        width: 100%;
-        height: 1px;
-        background-color: #879197;
-      }
-      &.disabled {
-        color: #879197;
-      }
+  }
+  .prev-class,
+  .next-class {
+    position: relative;
+    font-size: 20px;
+    font-weight: 700;
+    color: $blue;
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #879197;
+    }
+    &.disabled {
+      color: #879197;
     }
   }
-  .page-item[data-v-82963a40] {
+  .page-item {
     width: 64px;
     height: 64px;
     display: flex;
@@ -81,27 +105,36 @@
     font-weight: 700;
     background-color: #e7e7e9;
     color: #879197;
-    &:nth-child(2) {
+    &:nth-child(1) {
       border-top-left-radius: 16px;
       border-bottom-left-radius: 16px;
       margin-left: auto;
     }
-    &:nth-last-of-type(-n + 2) {
+    &:last-child {
       border-top-right-radius: 16px;
       border-bottom-right-radius: 16px;
       margin-right: auto;
     }
     &.active {
       background-color: $blue;
-      color: $white
+      color: $white;
     }
-  }
-  a[data-v-82963a40] {
-    display: block;
-    width: 100%;
-    height: 100%;
-    line-height: 64px;
-    text-align: center;
+    a {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    @include tablet-block() {
+      width: 46px;
+      height: 46px;
+      font-size: 18px;
+      flex: none;
+    }
   }
 }
 .news {
@@ -200,7 +233,7 @@
       visibility: hidden;
       transition: opacity 0.15s ease;
     }
-    &:hover {
+    @include hover-supported() {
       .news-item {
         &__overlay {
           opacity: 1;
@@ -231,6 +264,12 @@
         transition: color 0.25s ease;
       }
     }
+    @include tabletl-block() {
+      width: calc(100% - 20px);
+    }
+    @include tabletx-block() {
+      padding: 48px 32px;
+    }
   }
 }
 .views,
@@ -254,9 +293,16 @@
     align-items: center;
     justify-content: space-between;
     margin-bottom: 32px;
+    @include phonex-block() {
+      flex-direction: column;
+      margin-bottom: 16;
+    }
     &-left {
       display: flex;
       align-items: center;
+      @include phonex-block() {
+        margin-bottom: 16px;
+      }
     }
     &-right {
       display: flex;
@@ -272,6 +318,9 @@
     overflow: hidden;
     margin-bottom: 40px;
     margin-top: 64px;
+    @include phonex-block() {
+      margin-top: 34px;
+    }
     img {
       object-fit: cover;
     }
@@ -306,7 +355,8 @@
   }
   &-list {
     margin-left: 24px;
-    &-item {}
+    &-item {
+    }
     &-link {
       display: flex;
       align-items: center;
