--- a/theme/components/_app-input.scss
+++ b/theme/components/_app-input.scss
@@ -11,6 +11,7 @@
 .vs__search {
   position: relative;
   display: block;
+  background-color: transparent;
   width: 100%;
   border: none;
   resize: none;
